--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
     <title>Week 2 Exercise</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="javascript:void(0)">User CRUD</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="/">Home</a>
+                    <a class="nav-item nav-link" href="./add-edit.html">Add User</a>
+                </div>
+            </div>
+        </div>
+    </nav>
     <div style="width: 90vw; text-align: center" class="container">
-        <button id="btn-load" class="btn btn-primary mt-5" onclick="getUserData(event)">Load Data</button>
         <div class="table__container mt-5 mb-5">
             <table id="user-table" class="table table-striped table-dark table-hover">
                 <thead><!-- data will be generated dynamically by js --></thead>
@@ -28,7 +42,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    Are you sure you want to remove this row?
+                    Are you sure you want to remove this user?
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
@@ -80,6 +94,6 @@
     <script src="./public/js/jquery-3.4.1.min.js"></script>
     <script src="./public/js/popper.min.js"></script>
     <script src="./public/js/bootstrap.min.js"></script>
-    <script src="./public/js/index.js"></script>
+    <script type="module" src="./public/js/index.js"></script>
 </body>
 </html>
